Brightness, text overlap issue

--- a/style.css
+++ b/style.css
@@ -12,44 +12,19 @@ body {
   overflow: hidden;
 }
 
-.the-heading-of-the-matter {
-  position: absolute;
-  width: 100%;
-  margin-bottom: 20%;
-  font-size: 40px;
-  font-weight: bold;
-  text-align: center;
-  text-shadow: 4px 4px 5px green;
-  color: white;
-  font-family: "ZCOOL XiaoWei", serif;
-  letter-spacing: 5px;
-  z-index: 1;
-}
-
 .video-container {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   z-index: -1;
+  filter: brightness(50%);
 }
 
-.color-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgb(54, 53, 53);
-  width: 100%;
-  height: 100vh;
-  opacity: 0.4;
-}
-
-#clockityClock {
+.the-heading-of-the-matter {
   position: absolute;
   width: 100%;
-  margin-bottom: 50%;
-  margin-top: 100px;
-  font-size: 70px;
+  font-size: 30px;
   font-weight: bold;
   text-align: center;
   text-shadow: 4px 4px 5px green;
@@ -57,4 +32,8 @@ body {
   font-family: "ZCOOL XiaoWei", serif;
   letter-spacing: 5px;
   z-index: 1;
+}
+
+#clockityClock {
+  font-size: 100px;
 }
